Formatting volume1.tex

--- a/gen/volume1.tex
+++ b/gen/volume1.tex
@@ -1,4 +1,7 @@
-\documentclass{book}
+\documentclass[oneside]{book}
+
+\usepackage[paperheight=11in,paperwidth=8.5in]{geometry}
+
 \begin{document}
 \title{GENEALOGY OF THE CRANE FAMILY VOLUME I.}
 \author{ELLEREY BICKNELL CRANE}
@@ -197,7 +200,7 @@ Worcester, Mass., August, 189.'\}.
 
 
 
-EXPLANATION 
+\section{EXPLANATION} 
 
 
 
