Adding crests, formatting stuff for publishing

--- a/gen/volume1.tex
+++ b/gen/volume1.tex
@@ -792,9 +792,7 @@ Blomefleld History, County Norfolk.
 
 
 
-CRANK FAMILY IN ENGLAND. 2i 
-
-and C'laytons. The family liad noAV liecome quite numerous in 
+and Claytons. The family liad noAV liecome quite numerous in 
 England, the greater number of them, perhaps, residing in the 
 County of Norfolk. In 1416 John Pyke, late prior of the Holy 
 Trinity of Ipswich, granted to John Crane and Roger Cottemower 
