Adding in crest image to volume1.pdf...Uploading protocover

--- a/gen/volume1.tex
+++ b/gen/volume1.tex
@@ -2,11 +2,19 @@
 
 \usepackage[paperheight=11in,paperwidth=8.5in]{geometry}
 
+\usepackage{graphicx}
+
 \begin{document}
 \title{GENEALOGY OF THE CRANE FAMILY VOLUME I.}
 \author{ELLEREY BICKNELL CRANE}
 
 \maketitle
+
+\begin{figure}[t]
+\includegraphics{../mouthOfHorse/crest1.png}
+\centering
+\end{figure}
+
 \tableofcontents
 
 \chapter{Introductory Material}
