Working on adding images to volume1

--- a/gen/volume1.tex
+++ b/gen/volume1.tex
@@ -2,7 +2,7 @@
 
 \usepackage[paperheight=11in,paperwidth=8.5in]{geometry}
 
-\usepackage{graphicx}
+\usepackage{graphicx, subfigure}
 
 \begin{document}
 \title{GENEALOGY OF THE CRANE FAMILY VOLUME I.}
@@ -28,7 +28,7 @@ This is a \LaTeX $\:$ version of "Ellerey Crane's GENEOLOGY OF THE CRANE FAMILY,
 I endeavored to create this project for the following reasons: 
 
 \begin{enumerate}
-\item I coudn't find a good place to buy a hard copy version of this book
+\item I couldn't find a good place to buy a hard copy version of this book
 \item There is a .txt version of this book found at \texttt{https://archive.org/details/genealogyofcrane02cran}
 \item Creating a "modern" version of the book would be a fun project
 \item I can put the end product online for anyone to see. 
@@ -61,9 +61,9 @@ All the images in the book were removed by the OCR.
 THE observance of the Centennial anniversary of the Birth of 
 our Nation as a Republic in 1876, drew the attention of every 
 patriotic citizen to the charming picture to be seen by a careful 
-retrospective view* of the past history of the growth and develop- 
+retrospective view of the past history of the growth and develop- 
 ment of our government and Nation. It also fanned into a tlame 
-of activity the then smouldering desire among American people 
+of activity the then smoldering desire among American people 
 to know something of their ancestry. The brilliant achievements 
 of men throughout the various walks of life became emphasized 
 through the means and influence of that Centennial anniversary, 
@@ -73,8 +73,7 @@ histories have appeared in comparatively rapid succession.
 
 It was about the year 1876 that tlie writer became interested 
 in gathering materials for a history of the Ckaxe Family, and 
-on Wednesday, the -Sth of September, 1880, a company of descen- 
-dants from the early emigrants to this coiuitry who bore that [)atro- 
+on Wednesday, the -Sth of September, 1880, a company of descendants from the early emigrants to this coiuitry who bore that [)atro- 
 nymic, met at the Elliott House in New Haven, Conn., to con- 
 sider the advisability of publishing a family history. It was an 
 exceedingly enjoyal)le occasion, the expression on every hand was 
@@ -85,9 +84,8 @@ to this country had been made ])y the writer, an organization for
 business was effected by the choice of Robert Crane, j\\1.1)., of 
 New Haven, Chairman, and Mr. William R. Crane of Hartford, 
 Secretary. A motion to form an association for carrying for- 
-ward the work passed unaiiimously, and a committee was at once 
-selected to rei)ort on a permanent organization. After full dis- 
-cussion had been given to the delectable dinner prepared by land- 
+ward the work passed unanimously, and a committee was at once 
+selected to rei)ort on a permanent organization. After full discussion had been given to the delectable dinner prepared by land- 
 lord Samuel H. Crane, the party again entered the parlors to 
 
 
@@ -6204,8 +6202,11 @@ Silas, 3 Henry, ' Henryi), married Eli Graves. Children:
 
 
 
-
-
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=1]{../white/mrsWilliamAJudsonWhite.png}
+	\caption {MRS. WILLIAM A. JUDSON}
+\end{figure}
 
 
 
@@ -6220,15 +6221,6 @@ was third daughter of Capt. Aaron Rice, who served in the War
 of 1812. She died at Fredonia, N. Y., Aug. 31, 1862, one 
 month after the family arrived there, and Mr. Crane married 
 second, Amelia Borden, second cousin to his first wife. He is a 
-
-
-
-
-MKS. WILJJAM A. JUDSON. 
-
-
-
-
 member of the East Ohio Conference of the M. E. Church. In 
 and a law otflce, and was postmaster. Cliildren : 
 
@@ -6350,7 +6342,7 @@ HKXHV 1'. .irnsoN.
 
 
 
-Mr. Juclson then returued to Eethleliem, Coun., but soon pur- 
+Mr. Judson then returned to Bethlehem, Coun., but soon pur- 
 chased a farm in Elvaston, Hancock Co., 111., and removed to 
 that place and carried on farming for a time, but it was not a 
 business of his liking. A new company having been formed 
@@ -6409,14 +6401,13 @@ establishment of that institution his long and exceedingly
 able connection therewith. Coming to it at its inception as a 
 stranger to its managers, he at once impressed them with his 
 special fitness for the varied and, in many respects, peculiar 
-demands of the situation ; and his long and faithful experi- 
+demands of the situation ; and his long and faithful experience in its service has fully demonstrated the wisdom of his original selection. 
 
-
-
-
- ence in its service has fully demonstrated the wisdom of his 
-
-original selection. 
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=1]{../white/henryPJudsonWhite.png}
+	\caption {HENRY P. JUDSON}
+\end{figure}
 
 "'To his thorough equipment as a practical engineer -was 
 added a familiarity with the natural laws applicable to all 
@@ -6544,15 +6535,25 @@ of his fellow-citizens.
 She was born in Stepney, Conn., April 15, 1821. Mr. Crane 
 was a native of Bethlehem, Conn., and continued to reside there 
 
-Children : 
+Children : \\\\
 
 
 
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.75]{../white/robertCraneMDWhite.png}
+	\caption {ROBERT CRANE, MD}
+\end{figure}
+
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.75]{../white/robertCraneSignatureWhite.png}
+	\caption {ROBERT CRANE'S SIGNATURE}
+\end{figure}
 
 
 
-
-Silas, =' Henry,2 Henryi), married Eunice M. Averill, Feb. 17, 
+ROBERT CRANE, MD Silas, =' Henry,2 Henryi), married Eunice M. Averill, Feb. 17, 
 1847, at South Britain, Conn. She was born in Southbury, 
 Conn., May 30, 1820. Mr. Crane took up the study of medicine, 
 graduating from the Medical Department at Yale College in the 
@@ -6734,18 +6735,6 @@ old cemetery, Canandaigua, N. Y. Child :
 Henryi), married Reuben Beeman. Children: 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 d. of consumption, Dec. 3, 1867, leaving three children : 
 
 
@@ -6874,8 +6863,13 @@ family removed to Chicago, 111., where Mr. Crane was for many
 years engaged in mercantile business. He died at Kirkwood, 
 Mo., Aug. 17, 1880. Children: 
 
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.8]{../white/richardTellerCraneWhite.png}
+	\caption {RICHARD TELLER CRANE}
+\end{figure}
 
-Henry, 3 Henry,' Henryi), was born in Paterson, N. J., May 15, 
+RICHARD TELLER CRANE Henry, 3 Henry,' Henryi), was born in Paterson, N. J., May 15, 
 much to do with the better class of work in New York City and 
 Paterson, N. J., during the first third of the nineteenth century 
 and up to the time of the panic in 1837, when he was swept by 
@@ -6883,15 +6877,6 @@ the devastating tide and left in very straitened circumstances
 with a large family to provide for. The subject of this sketch, 
 being next to the youngest of the children, was obliged to find a 
 position in a factory when but nine years of age, and continued 
-
-
-
-
-KICIIAHl) TKLLKH (HANK 
-
-
-
-
 to work there until 1847, when he ohtained a situation to leani a 
 trade in a brass foundry and tinishing shop in Brooklyn, X. \\ ., 
 where he remained about four years. He afterwards secured 
@@ -6974,15 +6959,15 @@ born Feb. 22, 1836, and died Jan, 28, 1885. Children all born
 in Chicago, 111. : 
 
 
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.75]{../white/whitecharlesSquireCraneWhite.png}
+	\caption {CHARLES SQUIRE CRANE}
+\end{figure}
 
 
 
-
-
-
-
-
-Henry,3 Henry,' Henryi), was born at Passaic Falls, Paterson, 
+CHARLES S CRANE Henry,3 Henry,' Henryi), was born at Passaic Falls, Paterson, 
 N. J., where he attended school during his boyhood days. At 
 the age of 16 he went to Lockport, N. Y., to learn the trade of 
 moulding. After which he returned to Paterson, aud for a time 
@@ -7290,12 +7275,16 @@ Mr. Washburn was a tailor by trade. Children :
 
 
 
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.75]{../white/robertCraneMDWhite.png}
+	\caption {ROBERT CRANE, MD}
+\end{figure}
 
 
 
 
-
-Daniel,' Ebenezer,' John, 2 Henryi), born at Penu Yau, Yates 
+GEN. NIROM MARIUM CRANE (Nirom, Daniel,' Ebenezer,' John, 2 Henryi), born at Penu Yau, Yates 
 Co., N. Y.,.Dec. 13, 1828. His father, a well-to-do farmer, 
 assisted him to a liberal education, and being possessed of no 
 small degree of ambition, as well as a desire to gain a position 
