Adding more pictures; renaming another incorrect picutre

--- a/gen/volume1.tex
+++ b/gen/volume1.tex
@@ -7247,24 +7247,6 @@ Russell A.
 Ebenezer,3 John,' Henry'), married William D. Washburn, July 
 4, 1840, at Jerusalem, Yates Co., N. Y. He was born at Fort 
 Plains, Montgomery Co., N. Y. Their residence for a time was 
-
-
-
-llllKll 
-
-
-
-0' 
-
-
-
-
-
-'m'.' 
-
-
-
-
 at Jerusalem, where their two eldest children were born, after 
 which they removed to Italy Hill, Yates Co., N. Y., where their 
 daughter Annie was born. From there they removed to Pultney, 
@@ -7277,12 +7259,9 @@ Mr. Washburn was a tailor by trade. Children :
 
 \begin{figure}[htp]
 	\centering
-	\includegraphics[scale=0.75]{../white/robertCraneMDWhite.png}
-	\caption {ROBERT CRANE, MD}
+	\includegraphics[scale=0.75]{../white/niromSCraneWhite.png}
+	\caption {GEN. NIROM MARIUM CRANE}
 \end{figure}
-
-
-
 
 GEN. NIROM MARIUM CRANE (Nirom, Daniel,' Ebenezer,' John, 2 Henryi), born at Penu Yau, Yates 
 Co., N. Y.,.Dec. 13, 1828. His father, a well-to-do farmer, 
@@ -8029,8 +8008,20 @@ store.
 Robert Gr.,' Silas, ' Henry,' Henryi), married Dora Wakefield, 
 daughter of Elder Edwin W. Conley, March 4, 1873. Children : 
 
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.75]{../white/EBCraneWhite.png}
+	\caption {ELLERY BICKNELL CRANE}
+\end{figure}
 
-Robert Gr.,' Silas, ' Henry,' Henry'), born at Colebrook, Coos 
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.75]{../white/EBCraneSigWhite.png}
+	\caption {ELLERY BICKNELL CRANE'S SIGNATURE}
+\end{figure}
+
+
+ELLERY B CRANE (Robert P., Eleazer, Robert G.,' Silas, ' Henry,' Henry'), born at Colebrook, Coos 
 Co., N. H., Nov. 12, 1836; married Salona Aldrich Rawson, 
 May 13, 1859, at the home of his uncle, Samuel B. Cooper, 
 Esq., in Beloit, Rock Co., Wis., Rev. C. P. Bush performing 
@@ -8402,9 +8393,15 @@ John,'* Ebenezer,3 Johu,' Henryi), married Hiram C. Smith, and
 resides in Lawrence, Kan., although formerly for a time they lived 
 in Berlin, 111., and also in Stockton, 111. Children: 
 
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.75]{../white/EBCraneWhite.png}
+	\caption {ELLERY BICKNELL CRANE}
+\end{figure}
 
 
-Ebenezer,5 John,' Ebenezer,' John,' Henryi), born in West 
+
+WARREN CADY CRANE (Austin, Aaron, Ebenezer,5 John,' Ebenezer,' John,' Henryi), born in West 
 Granville, Hampden Co., Mass. ; married Caroline E. Cleveland, 
 a native of Winsted, Conn., at that place, Oct. 10, 1865. But 
 soon removed from there to Brooklyn, N. Y., and subsequently 
@@ -8413,28 +8410,7 @@ goods trade and is a successful merchant. Children :
 
 
 
-Ebeuezer,' John,' Ebeuezer,3 John,2 Henryi), born in Hart- 
-
-
-
-
-
-
-
-"-"'>o. ""'-4 
-
-
-
-'.'4 
-
-
-
-n'ck't"'i' 
-
-
-
-
-laud, Couu. ; married Albert P. Woodruff at Bristol, Sei)t. 15, 
+Ebeuezer,' John,' Ebeuezer,3 John,2 Henryi), born in Hartlaud, Conn. ; married Albert P. Woodruff at Bristol, Sei)t. 15, 
 1852, aud settled iu Forestville. Cliildreu : 
 
 
