Commiting final version (?)

--- a/gen/volume1.tex
+++ b/gen/volume1.tex
@@ -23,6 +23,10 @@
 
 This is a \LaTeX $\:$ version of "Ellerey Crane's GENEOLOGY OF THE CRANE FAMILY, VOLUME 1." first published in 1895. This project can be viewed on github at \texttt{https://github.com/NolanC33/geneBook}
 
+\subsection{Dedication}
+
+For my father - happy belated birthday!
+
 \subsection{Motivation}
 
 I endeavored to create this project for the following reasons: 
@@ -44,7 +48,11 @@ The file \texttt{MakePretty.py} contains most of the details as to how this proj
 \item Removed all the unprintable characters. 
 \item All the characters that are \LaTeX $\:$ control sequences were escaped.
 \item Chapters and sections were added 
-\item Manual revision to ensure everything is as it should be 
+\item Manual revision
+\begin{enumerate}
+\item Fixed all the titles and sections
+\item Added in the pictures
+\end{enumerate}
 \end{enumerate}
 
 \subsection{Last Notes}
@@ -52,9 +60,6 @@ The file \texttt{MakePretty.py} contains most of the details as to how this proj
 As stated before, there are a lot of spelling mistakes, unfortunately. The original index was also removed because the OCR did not interpret it in a way that makes sense as an index. 
 
 The pages numbers referred to in the document reference the OLD page numbers, not the page numbers that you see in this document. 
-
-All the images in the book were removed by the OCR. 
-
 
 \section{Preface}
 
@@ -244,11 +249,34 @@ records as they were reported.
 The following abbreviations have been used : b. for born, m. for mar- 
 ried, num. for unmarried, s. for settled, d. for died. 
 
+\begin{figure}[ht] 
+  \begin{minipage}[b]{0.5\linewidth}
+    \centering
+    \includegraphics[scale=0.25]{../white/whiteCrest1} 
+    \vspace{4ex}
+  \end{minipage}%%
+  \begin{minipage}[b]{0.5\linewidth}
+    \centering
+    \includegraphics[scale=0.25]{../white/whiteCrest2} 
+    \vspace{4ex}
+  \end{minipage} 
+  \begin{minipage}[b]{0.5\linewidth}
+    \centering
+    \includegraphics[scale=0.25]{../white/whiteCrest3} 
+    \vspace{4ex}
+  \end{minipage}%% 
+  \begin{minipage}[b]{0.5\linewidth}
+    \centering
+    \includegraphics[scale=0.25]{../white/whiteCrest4} 
+    \vspace{4ex}
+  \end{minipage} 
+\end{figure}
+
 
 \chapter{CRANE FAMILY ARMORIALS.}
 
 
-For inauy centuries coat armor has been used in England as a 
+For mauy centuries coat armor has been used in England as a 
 mark of honorable distinction among families whose representa- 
 tives, back in the dim and misty historical past, rendered gallant 
 or meritorious service to the crown, and for such service received 
@@ -8395,8 +8423,14 @@ in Berlin, 111., and also in Stockton, 111. Children:
 
 \begin{figure}[htp]
 	\centering
-	\includegraphics[scale=0.75]{../white/EBCraneWhite.png}
-	\caption {ELLERY BICKNELL CRANE}
+	\includegraphics[scale=0.75]{../white/WCCraneWhite.png}
+	\caption {WARREN CODY CRANE}
+\end{figure}
+
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.75]{../white/WCCraneSigWhite.png}
+	\caption {WARREN CODY CRANE'S SIGNATURE}
 \end{figure}
 
 
