Fixed pagination; resolved offset issues; potentially fixed dpi issues

--- a/gen/volume1.tex
+++ b/gen/volume1.tex
@@ -1,8 +1,17 @@
-\documentclass[oneside]{book}
+\documentclass{book}
 
 \usepackage[paperheight=11in,paperwidth=8.5in]{geometry}
 
 \usepackage{graphicx, subfigure}
+
+\setlength{\oddsidemargin}{0pt}  
+\setlength{\evensidemargin}{0pt}  
+
+
+
+\pdfpxdimen=1in
+
+\divide\pdfpxdimen by 300
 
 \begin{document}
 \title{GENEALOGY OF THE CRANE FAMILY VOLUME I.}
